--- a/style.css
+++ b/style.css
@@ -12,3 +12,12 @@ body {
    	justify-content: center;
 
 }
+.scroll {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+	display: none;
+}
+html {
+  scroll-behavior: smooth;
+}
